--- a/doctor-patient-client/NativeBase-KitchenSink/package.json
+++ b/doctor-patient-client/NativeBase-KitchenSink/package.json
@@ -34,6 +34,8 @@
     "native-base": "^2.7.2",
     "react": "16.4.1",
     "react-native": "0.56.0",
+    "react-native-calendars": "^1.20.0",
+    "react-native-events-calendar": "^1.0.8",
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-modal": "^6.5.0",
     "react-native-modal-datetime-picker": "^6.0.0",
